# nsfw_detect_api

./: .gitignore  LICENSE  README.md  api_tokens.db  pyproject.toml
app/: main.py
app/detector/: __init__.py
app/routes/: admin.py  api.py  auth.py  netdata.py  web.py
app/utils/: rate_limiter.py
scripts/: bench_isnude.py  bootstrap_env.sh  configure.py  install_systemd.py  setup_nginx.sh
tests/: get_sample_data.py  test_main.py
