[project]
name = "nswf_detect_api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "James Westover", email = "james@westover.dev"},
]
dependencies = ["nudenet>=3.4.2", "fastapi[standard]>=0.116.1", "pytest>=8.4.1", "datasets>=4.0.0", "requests>=2.32.4", "pillow>=11.3.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[tool.pdm.scripts]
dev = "fastapi dev app.main:app --port 6969"
serve = "uvicorn app.main:app --host 0.0.0.0 --port 6969"
test = { env = { PYTHONPATH = "." }, cmd = "pytest" }
fetch-data = "python tests/get_sample_data.py"
lock-matrix = "pdm lock --platform macos_arm64 --platform macos_x86_64 --platform manylinux_x86_64 --platform manylinux_aarch64, --platform manylinux_2_36_aarch64"
systemd-install = "python scripts/install_systemd.py"
# systemd helpers (Raspberry Pi / Linux)
service-status = "bash -lc 'systemctl status --no-pager nsfw_detect_api'"
service-logs = "bash -lc 'journalctl -u nsfw_detect_api -f -n 100'"
service-logs-all = "bash -lc 'journalctl -u nsfw_detect_api --no-pager -n 2000'"
service-restart = "bash -lc 'sudo systemctl restart nsfw_detect_api'"


[tool.pdm.build]
includes = ["app", "tests"]
excludes = ["tests/fixtures/*"]
